2020-08-03  Kostas Chasialis  <sdi1600195@di.uoa.gr>

	* libpoke/pk-val.c (pk_type_code): Now return PK_UINT
	if integral type is unsigned.
	* etc/pk-mi-json-schema.json (json_schema) : Changed "offsets"
	to "boffsets" on arrays and structs.

2020-08-02  Kostas Chasialis  <sdi1600195@di.uoa.gr>

	* libpoke/libpoke.h: Change poke to Poke on function documentations.

2020-08-01  Bruno Haible  <bruno@clisp.org>

	Update after gnulib changed.
	* configure.ac: Invoke gl_LIBTEXTSTYLE_OPTIONAL explicitly.

2020-07-27  Kostas Chasialis  <sdi1600195@di.uoa.gr>

	* etc/pk-mi-json-schema.json (json_schema): Indentation fixes.
	* libpoke/libpoke.h (pk_make_struct): Fixed function documentation.

2020-07-25  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Command Files): Renamed from Scripts.
	(Scripts): Renamed from Shebang.
	(Modifying SBM Images): Fix typo.

2020-07-24  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-val.h (PVM_VAL_TYP_I_SIGNED_P): Renamed from
	PVM_VAL_TYP_I_SIGNED.
	* libpoke/pkl.c (pvm_type_to_ast_type): Update accordingly.
	* libpoke/pvm-val.c (pvm_make_integral_type): Likewise.
	(pvm_print_val_1): Likewise.
	(pvm_type_equal): Likewise.
	* libpoke/pk-val.c (pk_integral_type_signed_p): Likewise.

2020-07-24  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi: Change title.

2020-07-24  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-anal.c (pkl_anal1_ps_type_struct): Integral structs
	cannot be pinned.
	* testsuite/poke.pkl/pinned-int-struct-1.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.
	* doc/poke.texi (Pinned Structs): Document that integral structs
	cannot be pinned.

2020-07-24  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Integral Structs): Document explicit casts to
	integral types, and coercions.

2020-07-23  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h (PKL_AST_TYPE_I_SIGNED_P): Rename from
	PKL_AST_TYPE_I_SIGNED.
	* libpoke/pkl-promo.c: Likewise.
	* libpoke/pkl-gen.c: Likewise.